05/08/2025 - 13h40 : - Modification de Banner.jsx pour retirer le <div> qui englobeait les sections. - Modifications mineures de Banner.css pour afficher le <h1> sur l'<img> - Création de la fonction dans collapse.jsx. Elle sert à afficher un menu déroulant qui lui même affiche des informations quand il est déroulé. - Création de Collapse.css avec le minimum syndical pour voir correctement les informations affichées. Sera correctement remplit dans le futur.

--- a/FrontEnd/src/Styles/Components/banner.css
+++ b/FrontEnd/src/Styles/Components/banner.css
@@ -1,5 +1,15 @@
+.banner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .banner img {
     width: 1240px;
     height: 223px;
     object-fit: cover;
+}
+
+.banner h1 {
+    position: absolute;
 }
